<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_Variables" Id="{4e0ea985-29d8-4132-9223-f15e8fa1fe3d}">
    <Declaration><![CDATA[VAR_GLOBAL
	
{attribute 'pytmc' := '
	pv: @(PREFIX)SYSOVERRIDE
'}
xSystemOverrideMode : BOOL; (* Global system override for the prototype section*)

//Example implementation of the FFO
{attribute 'pytmc' := '
	pv: @(PREFIX)FFO:01
'}
{attribute 'TcLinkTo' := '.q_xFastFaultOut:=TIIB[PMPS_FFO (EL2202)]^Channel 1^Output'}
g_FastFaultOutputK0  :   FB_HardwareFFOutput;

    {attribute 'pytmc' := '
    	pv: PLC:KFE:VAC:K0:FFO:02
    '}
    {attribute 'TcLinkTo' := '.q_xFastFaultOut:=TIIB[PMPS_FFO (EL2202)]^Channel 2^Output'}
    g_FastFaultOutput2  :	FB_HardwareFFOutput;	//FFO for Fast Shutter Valves upstream of ST1L0_XTES
	

// Dummy FFO for valves not yet allowed to open. To be removed when proper interfaces to TXI and RIX vacuum are implemented. 
{attribute 'pytmc' := '
	pv: @(PREFIX)FF1A
'}
g_FastFaultOutputINTF  :   FB_HardwareFFOutput;

{attribute 'pytmc' := '
pv: @(PREFIX)RESET:FF1
'}
xReset_PMPS_FFO_K0	:	BOOL	:=	FALSE;		//FFO RESET for ST1L0_XTES's Upstream Components


fbLogHandler : FB_loghandler;
fbEcatDiagWrapper : FB_EcatDiagWrapper;


{attribute 'pytmc' := '
     pv: @(PREFIX)Arbiter:01
'}
g_fbArbiter1    :   FB_Arbiter(01);
     

END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>