<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <POU Name="PRG_SXR_VAC" Id="{7118719b-3077-4104-9acc-cffb49d6edd3}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_SXR_VAC
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// Treaty interface

fb_TV1K0_INTF_GCC_1(); 

fb_RTDSK0_INTF_VGC_1(TREATY_VGC := fb_RTDSK0_VGC_1.iq_stValve);

// MKS275 Gauges

fb_MR2K3_TXI_GPI_1(PG=>);
fb_MR1K3_TXI_GPI_1(PG=>);
fb_SP1K1_MONO_GPI_1(PG=>);
fb_TV3K0_GPI_1(PG=>);
fb_MR1K4_SOMS_GPI_1(PG=>);

// MKS500_EP Gauges

fb_MR2K3_TXI_GCC_1(PG := fb_MR2K3_TXI_GPI_1.PG);
fb_MR1K3_TXI_GCC_1(PG := fb_MR1K3_TXI_GPI_1.PG);
fb_SP1K1_MONO_GCC_1(PG := fb_SP1K1_MONO_GPI_1.PG);
fb_TV3K0_GCC_1(PG := fb_TV3K0_GPI_1.PG);
fb_MR1K4_SOMS_GCC_1(PG := fb_MR1K4_SOMS_GPI_1.PG);

// VGC Valves

fb_RTDSK0_VGC_1(i_stUSG := fb_TV1K0_INTF_GCC_1.IG, i_stDSG := fb_RTDSK0_PIP_1.q_IG, i_xDis_DPIlk := FALSE, i_xEPS_OK := TRUE, i_xPMPS_OK := TRUE, i_xExt_OK := TRUE, i_xOverrideMode := xSystemOverrideMode, io_fbFFHWO := g_FastFaultOutputK0);
fb_EM1K0_GMD_VGC_1(i_stUSG := fb_RTDSK0_PIP_3.q_IG, i_stDSG := fb_EM1K0_GMD_GCC_10_reader.IG, i_xDis_DPIlk := FALSE, i_xEPS_OK := TRUE, i_xPMPS_OK := TRUE, 
    i_xExt_OK := (NOT fb_EM1K0_GMD_GCC_10_reader.bError),
    i_xOverrideMode := xSystemOverrideMode, io_fbFFHWO := g_FastFaultOutputK0);
fb_AT1K0_GAS_VGC_1(i_stUSG := fb_PCPM3B_PIP_1.q_IG, i_stDSG := fb_AT1K0_GAS_GCC_10_reader.IG, i_xDis_DPIlk := FALSE, i_xEPS_OK := TRUE, i_xPMPS_OK := TRUE,
    i_xExt_OK := (NOT fb_AT1K0_GAS_GCC_10_reader.bError), 
    i_xOverrideMode := xSystemOverrideMode, io_fbFFHWO := g_FastFaultOutputK0);
fb_EM2K0_XGMD_VGC_1(i_stUSG := fb_AT1K0_GAS_GCC_140_reader.IG, i_stDSG := fb_EM2K0_XGMD_GCC_10_reader.IG, i_xDis_DPIlk := FALSE, i_xEPS_OK := TRUE, i_xPMPS_OK := TRUE,
    i_xExt_OK := (NOT fb_AT1K0_GAS_GCC_140_reader.bError) AND (NOT fb_EM2K0_XGMD_GCC_10_reader.bError), 
    i_xOverrideMode := xSystemOverrideMode, io_fbFFHWO := g_FastFaultOutputK0);
fb_EM2K0_XGMD_VGC_2(i_stUSG := fb_EM2K0_XGMD_GCC_90_reader.IG, i_stDSG := fb_TV2K0_GCC_1.IG, i_xDis_DPIlk := FALSE, i_xEPS_OK := TRUE, i_xPMPS_OK := TRUE,
    i_xExt_OK := (NOT fb_EM2K0_XGMD_GCC_90_reader.bError), 
    i_xOverrideMode := xSystemOverrideMode, io_fbFFHWO := g_FastFaultOutputK0);
fb_TV2K0_VGC_1(i_stUSG := fb_TV2K0_GCC_1.IG, i_stDSG := fb_TV2K0_GCC_2.IG, i_xDis_DPIlk := FALSE, i_xEPS_OK := TRUE, i_xPMPS_OK := TRUE, i_xExt_OK := TRUE, i_xOverrideMode := xSystemOverrideMode, io_fbFFHWO := g_FastFaultOutputK0);
fb_MR1K1_BEND_VGC_1(i_stUSG :=  fb_PA1K0.q_IG, i_stDSG :=fb_MR1K3_TXI_PIP_1.q_IG, i_xDis_DPIlk := FALSE, i_xEPS_OK := TRUE, i_xPMPS_OK := TRUE, i_xExt_OK := TRUE, i_xOverrideMode := xSystemOverrideMode, io_fbFFHWO := g_FastFaultOutputK0);
fb_MR1K3_TXI_VGC_1(i_stUSG := fb_MR1K1_BEND_PIP_1.q_IG, i_stDSG := fb_MR1K3_TXI_PIP_1.q_IG, i_xDis_DPIlk := FALSE, i_xEPS_OK := TRUE, i_xPMPS_OK := TRUE, i_xExt_OK := TRUE, i_xOverrideMode := xSystemOverrideMode, io_fbFFHWO := g_FastFaultOutputK0);
fb_SP1K1_MONO_VGC_1(i_stUSG := fb_MR2K3_TXI_PIP_1.q_IG, i_stDSG := fb_SP1K1_MONO_PIP_1.q_IG, i_xDis_DPIlk := FALSE, i_xEPS_OK := TRUE, i_xPMPS_OK := TRUE, i_xExt_OK := TRUE, i_xOverrideMode := xSystemOverrideMode, io_fbFFHWO := g_FastFaultOutputK0);
fb_SP1K1_MONO_VGC_2(i_stUSG := fb_SP1K1_MONO_PIP_1.q_IG, i_stDSG := , i_xDis_DPIlk := FALSE, i_xEPS_OK := TRUE, i_xPMPS_OK := TRUE, i_xExt_OK := TRUE, i_xOverrideMode := xSystemOverrideMode, io_fbFFHWO := g_FastFaultOutputK0);
fb_IM1K2_PPM_VGC_1(i_stUSG := fb_MR2K3_TXI_PIP_1.q_IG, i_stDSG := , i_xDis_DPIlk := FALSE, i_xEPS_OK := TRUE, i_xPMPS_OK := TRUE, i_xExt_OK := TRUE, i_xOverrideMode := xSystemOverrideMode, io_fbFFHWO := g_FastFaultOutputK0);
fb_TV3K0_VGC_1(i_stUSG := fb_MR2K3_TXI_PIP_1.q_IG, i_stDSG := fb_TV3K0_PIP_1.q_IG, i_xDis_DPIlk := FALSE, i_xEPS_OK := TRUE, i_xPMPS_OK := TRUE, i_xExt_OK := TRUE, i_xOverrideMode := xSystemOverrideMode, io_fbFFHWO := g_FastFaultOutputK0);
fb_MR1K4_SOMS_VGC_1(i_stUSG := fb_TV3K0_PIP_1.q_IG, i_stDSG := fb_MR1K4_SOMS_GCC_1.IG, i_xDis_DPIlk := FALSE, i_xEPS_OK := TRUE, i_xPMPS_OK := TRUE, i_xExt_OK := TRUE, i_xOverrideMode := xSystemOverrideMode, io_fbFFHWO := g_FastFaultOutputK0);

// VFS Valves

// fb_TV2K0_VFS_1(i_xPMPS_OK := TRUE, i_xExt_OK := TRUE, i_xOverrideMode := xSystemOverrideMode);

// PIP_Gamma Pumps

fb_RTDSK0_PIP_1(	i_stGauge := fb_RTDSK0_GCC_1.IG,		i_xOverrideMode := xSystemOverrideMode);
fb_RTDSK0_PIP_2(	i_stGauge := fb_RTDSK0_GCC_1.IG,		i_xOverrideMode := xSystemOverrideMode);
fb_RTDSK0_PIP_3(	i_stGauge := fb_RTDSK0_GCC_1.IG,		i_xOverrideMode := xSystemOverrideMode);
fb_RTDSK0_PIP_4(	i_stGauge := fb_RTDSK0_GCC_1.IG,		i_xOverrideMode := xSystemOverrideMode);
fb_RTDSK0_PIP_5(	i_stGauge := fb_RTDSK0_GCC_1.IG,		i_xOverrideMode := xSystemOverrideMode);
fb_PCPM3B_PIP_1(	i_stGauge := fb_PCPM3B_GFS_1.IG,		i_xOverrideMode := xSystemOverrideMode);
fb_PA1K0_PIP_1(		i_stGauge := fb_PA1K0_GCC_1.IG,			i_xOverrideMode := xSystemOverrideMode);
fb_PA1K0(			i_stGauge := fb_PA1K0_GCC_1.IG,			i_xOverrideMode := xSystemOverrideMode);
fb_MR1K1_BEND_PIP_1(i_stGauge := fb_MR1K1_BEND_GCC_1.IG,	i_xOverrideMode := xSystemOverrideMode);
fb_MR2K3_TXI_PIP_1(	i_stGauge := fb_MR2K3_TXI_GCC_1.IG,		i_xOverrideMode := xSystemOverrideMode);
fb_MR1K3_TXI_PIP_1(	i_stGauge := fb_MR1K3_TXI_GCC_1.IG,		i_xOverrideMode := xSystemOverrideMode);
fb_SP1K1_MONO_PIP_1(i_stGauge := fb_SP1K1_MONO_GCC_1.IG,	i_xOverrideMode := xSystemOverrideMode);
fb_SP1K1_MONO_PIP_2(i_stGauge := fb_SP1K1_MONO_GCC_1.IG,	i_xOverrideMode := xSystemOverrideMode);
fb_TV3K0_PIP_1(		i_stGauge := fb_TV3K0_GCC_1.IG,			i_xOverrideMode := xSystemOverrideMode);


// FB_MKS422

fb_RTDSK0_GCC_1(PG := fb_RTDSK0_GPI_1.PG);
fb_IM1K0_XTES_GCC_1(PG := fb_IM1K0_XTES_GPI_1.PG);
fb_PCPM3B_GFS_1(PG := fb_SL1K0_POWER_GPI_1.PG);
fb_SL1K0_POWER_GCC_1(PG := fb_SL1K0_POWER_GPI_1.PG);
fb_TV2K0_GCC_1(PG := fb_TV2K0_GPI_1.PG);
fb_TV2K0_GCC_2(PG := fb_TV2K0_GPI_2.PG);
fb_PA1K0_GCC_1(PG := fb_PA1K0_GPI_1.PG);
fb_MR1K1_BEND_GCC_1(PG := fb_MR1K1_BEND_GPI_1.PG);

// FB_MKS317

fb_RTDSK0_GPI_1(PG=>);
fb_IM1K0_XTES_GPI_1(PG=>);
fb_SL1K0_POWER_GPI_1(PG=>);
fb_TV2K0_GPI_1(PG=>);
fb_TV2K0_GPI_2(PG=>);
fb_PA1K0_GPI_1(PG=>);
fb_MR1K1_BEND_GPI_1(PG=>);
]]></ST>
    </Implementation>
    <LineIds Name="PRG_SXR_VAC">
      <LineId Id="95" Count="0" />
      <LineId Id="190" Count="0" />
      <LineId Id="187" Count="0" />
      <LineId Id="189" Count="0" />
      <LineId Id="184" Count="1" />
      <LineId Id="96" Count="6" />
      <LineId Id="107" Count="7" />
      <LineId Id="119" Count="4" />
      <LineId Id="202" Count="0" />
      <LineId Id="206" Count="0" />
      <LineId Id="124" Count="0" />
      <LineId Id="210" Count="0" />
      <LineId Id="207" Count="0" />
      <LineId Id="125" Count="0" />
      <LineId Id="204" Count="0" />
      <LineId Id="208" Count="0" />
      <LineId Id="126" Count="0" />
      <LineId Id="205" Count="0" />
      <LineId Id="209" Count="0" />
      <LineId Id="127" Count="7" />
      <LineId Id="194" Count="1" />
      <LineId Id="197" Count="0" />
      <LineId Id="196" Count="0" />
      <LineId Id="138" Count="16" />
      <LineId Id="159" Count="21" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>